--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,14 +1,18 @@
+---
 spring:
   application:
-    name: deviceapi
+    name: "deviceapi"
+  jpa:
+    hibernate:
+      ddl-auto: "update"
   datasource:
-    driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/deviceapi
-    username: username
-    password: password
+    driverClassName: "org.postgresql.Driver"
+    url: "jdbc:postgresql://localhost:5432/deviceapi"
+    username: "username"
+    password: "password"
     jpa:
       show-sql: true
       properties:
         hibernate:
           format_sql: true
-          dialect: org.hibernate.dialect.PostgreSQLDialect
+          dialect: "org.hibernate.dialect.PostgreSQLDialect"
