--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -6,8 +6,11 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=password
       - POSTGRES_USER=username
       - POSTGRES_DB=deviceapi
+
+volumes:
+  db_data:
