--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,34 +1,34 @@
+---
 spring:
   application:
-    name: deviceapi
+    name: "deviceapi"
   jackson:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
-    default-property-inclusion: non_null
+    default-property-inclusion: "non_null"
   datasource:
-    driverClassName: org.postgresql.Driver
-    url: ${DB_URL:}
-    username: ${DB_USERNAME:}
-    password: ${DB_PASSWORD:}
+    driverClassName: "org.postgresql.Driver"
+    url: "${DB_URL:}"
+    username: "${DB_USERNAME:}"
+    password: "${DB_PASSWORD:}"
     hikari:
-      maximum-pool-size: ${HIKARI_MAX_POOL_SIZE:32}
-      minimum-idle: ${HIKARI_MIN_IDLE:8}
+      maximum-pool-size: "${HIKARI_MAX_POOL_SIZE:32}"
+      minimum-idle: "${HIKARI_MIN_IDLE:8}"
       idle-timeout: 300000
       max-lifetime: 1800000
       connection-timeout: 20000
       validation-timeout: 5000
       data-source-properties:
-        stringtype: unspecified
-        ApplicationName: ${spring.application.name}
-        # 10s server-side query timeout (tune to your SLOs)
-        options: -c statement_timeout=10000 -c idle_in_transaction_session_timeout=10000
+        stringtype: "unspecified"
+        ApplicationName: "${spring.application.name}"
+        options: "-c statement_timeout=10000 -c idle_in_transaction_session_timeout=10000"
     jpa:
       open-in-view: false
       show-sql: true
       properties:
         hibernate:
           jdbc:
-            time_zone: UTC
+            time_zone: "UTC"
             batch_size: 50
             fetch_size: 50
           order_inserts: true
@@ -38,19 +38,18 @@ spring:
   threads:
     virtual:
       enabled: true
-
 server:
-  port: ${SERVER_PORT:8080}
-  shutdown: graceful
+  port: "${SERVER_PORT:8080}"
+  shutdown: "graceful"
   compression:
     enabled: true
-    min-response-size: 2KB
-    mime-types: text/html,text/xml,text/plain,text/css,application/json,application/xml,application/javascript,text/javascript
+    min-response-size: "2KB"
+    mime-types: "text/html,text/xml,text/plain,text/css,application/json,application/xml,application/javascript,text/javascript"
   http2:
     enabled: true
   tomcat:
     threads:
-      max: ${TOMCAT_MAX_THREADS:200}
-      min-spare: ${TOMCAT_MIN_SPARE_THREADS:20}
-    accept-count: ${TOMCAT_ACCEPT_COUNT:100}
-    connection-timeout: ${SERVER_CONNECTION_TIMEOUT:30s}
+      max: "${TOMCAT_MAX_THREADS:200}"
+      min-spare: "${TOMCAT_MIN_SPARE_THREADS:20}"
+    accept-count: "${TOMCAT_ACCEPT_COUNT:100}"
+    connection-timeout: "${SERVER_CONNECTION_TIMEOUT:30s}"
