--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,16 +1,15 @@
-version: '3.9'
-
+include:
+  - docker-compose-postgres.yaml
 services:
-  postgres:
-    image: postgres:18-alpine
-    ports:
-      - 5432:5432
-    volumes:
-      - db_data:/var/lib/postgresql/data
+  app:
+    build:
+      context: ../
+      dockerfile: docker/Dockerfile
+    depends_on:
+      - postgres
     environment:
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_USER=username
-      - POSTGRES_DB=deviceapi
-
-volumes:
-  db_data:
+      - DB_URL=jdbc:postgresql://postgres:5432/deviceapi
+      - DB_USERNAME=username
+      - DB_PASSWORD=password
+    ports:
+      - 8080:8080
