--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,19 +18,31 @@ spring:
         stringtype: "unspecified"
         ApplicationName: "${spring.application.name}"
         options: "-c statement_timeout=10000 -c idle_in_transaction_session_timeout=10000"
-    jpa:
-      open-in-view: false
-      show-sql: true
-      properties:
-        hibernate:
-          jdbc:
-            time_zone: "UTC"
-            batch_size: 50
-            fetch_size: 50
-          order_inserts: true
-          order_updates: true
-          generate_statistics: true
-          format_sql: true
+  jpa:
+    open-in-view: false
+    show-sql: true
+    hibernate:
+      ddl-auto: "validate"
+    properties:
+      hibernate:
+        jdbc:
+          time_zone: "UTC"
+          batch_size: 50
+          fetch_size: 50
+        order_inserts: true
+        order_updates: true
+        generate_statistics: true
+        format_sql: true
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    baseline-version: "0"
+    validate-on-migrate: true
+    locations: "classpath:db/migration"
+    schemas: "public"
+    placeholder-replacement: true
+    placeholders:
+      app-name: "${spring.application.name}"
   threads:
     virtual:
       enabled: true
